--- a/Templates/Index.phtml
+++ b/Templates/Index.phtml
@@ -1,10 +1,10 @@
 <h1>Globals</h1>
-<section class="styleguide">
-<h3 class="styleguide__header">
-        <span class="styleguide__title">Farben</span>
+<section class="styleguide__block">
+<h3 class="styleguide__block__header">
+        <span class="styleguide__block__title">Farben</span>
     </h3>
 
-    <div class="styleguide__description">Grund- und Schmuckfarben</div>
+    <div class="styleguide__block__description">Grund- und Schmuckfarben</div>
 
 	<div class="styleguide__colors styleguide__colors--primary">
 		<figure class="styleguide__colorswatch styleguide__colorswatch--brand-primary">@brand-primary</figure>
@@ -44,9 +44,9 @@
 
 </section>
 
-<section class="styleguide">
-	<h3 class="styleguide__header">
-        <span class="styleguide__title">Font-Stacks</span>
+<section class="styleguide__block">
+	<h3 class="styleguide__block__header">
+        <span class="styleguide__block__title">Font-Stacks</span>
     </h3>
 
     <!-- <div class="styleguide__description"></div> -->
