--- a/Templates/Layout/Styleguide.phtml
+++ b/Templates/Layout/Styleguide.phtml
@@ -1,14 +1,3 @@
-
-
-<?php $Styleguide->displayTemplate('Menu'); ?>
-
-<div id="wrapper">
+<div class="styleguide__wrapper">
 	<?php $Styleguide->displayTemplate($vars['template'], $vars); ?>
-
-    <footer>
-    <p class="text-right">
-    <?php echo $Styleguide->getTitle(); ?> - 0.0.1dev - Stand 15-02-2015
-    </p>
-    </footer>
-
 </div>
