Complete UI-Overhaul

--- a/Application/less/main.less
+++ b/Application/less/main.less
@@ -1,1 +1,16 @@
 @import "../../Packages/Libraries/twbs/bootstrap/less/bootstrap.less";
+
+/*
+ Example
+ 
+ Example component
+
+ Markup:
+ <ul>
+ 	<li>cats</li>
+ 	<li>dogs</li>
+ 	<li>unicorns</li>
+ </ul>
+
+ Styleguide 1.0
+ */
