Restructured frontend, previews as iframes

--- a/Application/less/main.less
+++ b/Application/less/main.less
@@ -1,16 +1,49 @@
 @import "../../Packages/Libraries/twbs/bootstrap/less/bootstrap.less";
 
 /*
- Example
+ Lists
  
- Example component
+ Just an example
+
+ Styleguide 1.0
+ */
+
+ /*
+ Ordered list
+ 
+ A list with fancy numbers.
 
  Markup:
- <ul>
+ <ol>
  	<li>cats</li>
  	<li>dogs</li>
  	<li>unicorns</li>
- </ul>
+ </ol>
 
- Styleguide 1.0
+ Styleguide 1.1
+ */
+
+ /*
+ Blablabla
+
+ Markup:
+ <p>Lorem ipsum dolor</p>
+ <a href="#" class="btn btn-primary">Test</a>
+
+ Styleguide 1.2
+ */
+
+  /*
+ Here have code
+
+ Markup:
+ <img src="http://i.giphy.com/6RuhlzSdhIAqk.gif" />
+
+ Styleguide 1.3
+ */
+
+   /*
+ Another chapter
+
+ Styleguide 2
  */
