--- a/Templates/Layout/Preview.phtml
+++ b/Templates/Layout/Preview.phtml
@@ -3,7 +3,18 @@
 <head>
     <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
     <title>Styleguide Preview</title>
-    <link rel="stylesheet" href="css/main.css" />
+    <?php 
+
+    foreach ($Styleguide->getSource()->getCSSResources() as $resource) {
+    	echo '<link rel="stylesheet" type="text/css" href="'.$resource.'" />';
+    }
+
+    foreach ($Styleguide->getSource()->getJSResources() as $resource) {
+    	echo '<script src="'.$resource.'"></script>';
+    }
+
+    ?>
+    
     <link rel="stylesheet" href="css/preview.css" />
 
 </head>
