--- a/Templates/Layout/Styleguide.phtml
+++ b/Templates/Layout/Styleguide.phtml
@@ -3,8 +3,8 @@
 <head>
     <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
     <title>Styleguide</title>
-    <link rel="stylesheet" href="css/styleguide.css" />
-    <link rel="stylesheet" href="../Packages/Libraries/components/jqueryui/themes/start/jquery-ui.min.css" />
+    <link rel="stylesheet" href="Styleguide/Core/css/styleguide.css" />
+    <link rel="stylesheet" href="Styleguide/Core/contrib/jqueryui/themes/start/jquery-ui.min.css" />
 
 </head>
 <body>
@@ -45,11 +45,11 @@
 	<div class="styleguide__loader"><div class="styleguide__loader__icon"><span class="fa fa-cog fa-spin fa-fw"></span></div></div>
 </div>
 
-<script src="../Packages/Libraries/components/jquery/jquery.min.js"></script>
-<script src="../Packages/Libraries/components/jqueryui/jquery-ui.min.js"></script>
-<script src="../Packages/Libraries/twbs/bootstrap/dist/js/bootstrap.min.js"></script>
-<script src="contrib/sidr/jquery.sidr.min.js"></script>
-<script src="js/styleguide.js"></script>
+<script src="Styleguide/Core/contrib/jquery/jquery.min.js"></script>
+<script src="Styleguide/Core/contrib/jqueryui/jquery-ui.min.js"></script>
+<script src="Styleguide/Core/contrib/bootstrap/dist/js/bootstrap.min.js"></script>
+<script src="Styleguide/Core/contrib/sidr/jquery.sidr.min.js"></script>
+<script src="Styleguide/Core/js/styleguide.js"></script>
 
 </body>
 </html> 
